# k8sense

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
docs/superpowers/plans/: 2026-05-25-k8sense-phase-1.md  2026-05-26-k8sense-phase-2.md  2026-05-26-k8sense-phase-3.md  2026-05-26-k8sense-phase-4.md
docs/superpowers/specs/: 2026-05-25-k8sense-design.md  2026-05-26-k8sense-phase-2-design.md  2026-05-26-k8sense-phase-3-design.md  2026-05-26-k8sense-phase-4-design.md
evals/: dataset.jsonl  runner.py
src/k8sense/: __init__.py  agent.py  cli.py  permissions.py  render.py
src/k8sense/hooks/: __init__.py  pre_tool_use.py  safe_actions.py
src/k8sense/mcp_server/: __init__.py  _validation.py  prompts.py  resources.py  server.py
src/k8sense/memory/: __init__.py  journal.py  signature.py
src/k8sense/prompts/: system.py
src/k8sense/subagents/: __init__.py  event_triager.py  log_investigator.py  metrics_analyst.py
src/k8sense/tools/: kubectl.py  prometheus.py  registry.py
tests/: conftest.py
tests/smoke/: test_mcp_stdio.py  test_propose_mode.py  test_real_cluster.py  test_subagent_hook_propagation.py
tests/unit/: test_agent_helpers.py  test_cli.py  test_eval_runner.py  test_journal.py  test_kubectl_allowlist.py  test_kubectl_execution.py  test_kubectl_tool_wrapper.py  test_mcp_prompts.py  test_mcp_resources.py  test_mcp_server.py  test_permissions.py  test_pre_tool_use_hook.py  test_prometheus_tool.py  test_render.py  test_safe_actions.py  test_signature.py  test_subagents.py  test_system_prompt.py  test_tool_registry.py
