[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "k8sense"
version = "0.1.0"
description = "Claude Agent SDK SRE for homelab k3s clusters"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
k8sense = "k8sense.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
